Fixing logic in sign off screen, tweaking publishing modal text

--- a/Catalogue.Web/app/css/main.less
+++ b/Catalogue.Web/app/css/main.less
@@ -748,6 +748,13 @@ form .ng-invalid {
     display: block;
     width: 55%;
     margin: 0 auto;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.publishing-extra-info {
+    font-weight: bold;
+    color: @dark;
 }
 
 
@@ -829,11 +836,6 @@ form .ng-invalid {
     color: #666666;
 }
 
-// Publishing modal
-.publishing-extra-info {
-    font-weight: bold;
-    color: @dark;
-}
 
 // Publishing status multistep style modified from https://codyhouse.co/gem/css-breadcrumbs-and-multi-step-indicator/
 .cd-multi-steps {
